# generative_agents

./: .gitignore  CLAUDE.md  README_mike.md  pyproject.toml  requirements-local.txt
environment/frontend_server/storage/base_the_ville_isabella_maria_klaus/personas/Lois Lane/bootstrap_memory/: scratch.json  spatial_memory.json
environment/frontend_server/storage/lois_test/environment/: 0.json
environment/frontend_server/storage/lois_test2/movement/: 0.json
environment/frontend_server/storage/lois_test2/personas/Lois Lane/bootstrap_memory/: scratch.json  spatial_memory.json
environment/frontend_server/storage/lois_test2/reverie/: meta.json
environment/frontend_server/templates/home/: home.html  main_script.html
environment/frontend_server/translator/: views.py
reverie/backend_server/: reverie.py  utils.py
reverie/backend_server/persona/prompt_template/: __init__.py  gpt_structure.py  llm_config.py  run_gpt_prompt.py
reverie/backend_server/persona/prompt_template/v2/: generate_event_triple_v1.txt
specs/: add-openrouter-key.md  next_steps_to_get_lois_going.md  steps_add_character.md
wise_docs/: 01_SETUP_PLAN.md  02_UV_SETUP.md  03_MODEL_UPDATES.md  04_BUG_FIXES.md
