[project]
name = "generative-agents"
version = "1.0.0"
description = "Generative Agents: Interactive Simulacra of Human Behavior"
requires-python = ">=3.9,<3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "asgiref>=3.5.0",
    "attrs>=22.0.0",
    "boto>=2.49.0",
    "botocore>=1.29.0",
    "certifi",
    "charset-normalizer",
    "click>=8.0.0",
    "cycler",
    "dj-database-url>=0.5.0",
    "Django>=2.2,<3.0",
    "django-cors-headers>=2.5.0",
    "django-storages-redux>=1.3.0",
    "gensim>=4.0.0",
    "gunicorn>=20.0.0",
    "idna",
    "importlib-metadata",
    "jmespath",
    "joblib>=1.1.0",
    "kiwisolver",
    "matplotlib>=3.5.0",
    "nltk>=3.6.0",
    "numpy>=1.21.0",
    "openai>=0.27.0,<1.0.0",
    "packaging",
    "pandas>=1.3.0",
    "patsy",
    "Pillow>=8.0.0",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "regex",
    "requests>=2.26.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.12.0",
    "selenium>=4.0.0",
    "six",
    "smart-open>=5.0.0",
    "sortedcontainers",
    "sqlparse",
    "statsmodels>=0.13.0",
    "tqdm>=4.60.0",
    "trio>=0.22.0",
    "trio-websocket",
    "trueskill",
    "typing-extensions",
    "urllib3>=1.26.0",
    "yellowbrick>=1.3",
]
